[package]
version = "0.1.0"
name = "calculator-wasm-rust-pwa"
description = "A simple calculator created to demonstrate how to work with web gui on rust."
authors = ["Matkin Alexandr <mae664128@gmail.com>"]
edition = "2021"
rust-version = "1.67.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = { version = "0.21.3", default-features = false, features = ["default_fonts", "glow", "persistence"] }

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
tracing-wasm = "0.2"
wasm-bindgen-futures = "0.4"

[profile.release]
opt-level = 2 # fast and small wasm
codegen-units = 1
lto = true
panic = "abort"

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2